# kata-setup-python

./: pyproject.toml
src/: password.py
tests/: test_kata.py  test_password.py
