[tool.poetry]
name = "kata-setup-python"
version = "0.1.0"
description = ""
authors = ["Carlos Lopez Perez <clopez@fmit-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
